Optimized UI, added PM,TL roles, fixed BookingDetails status for Users.

--- a/src/main/resources/templates/admin/update.html
+++ b/src/main/resources/templates/admin/update.html
@@ -105,6 +105,8 @@
                 <div>
                     <select class="form-control" id="role" name="role">
                         <option value="2" selected>USER</option>
+                        <option value="4">Project Manager</option>
+                        <option value="3">Team Leader</option>
                         <option value="1">ADMIN</option>
                     </select>
                 </div>
