Minor UI fixes.

--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -35,7 +35,7 @@
 					<h4><span th:utext="${userManagement}">User-Management</span></h4>
 					<span th:utext="${userName}"></span>
 					<div style="float:right;">
-						<form th:action="@{/registration}" method="get">
+						<form th:action="@{/admin/registration}" method="get">
 							<button class="button2" name="registration"
 									type="Submit">Add</button>
 						</form>
