--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand active" href="#">Book A MeetingRoom</a>
+        </div>
+    </div>
+</nav>
 <div class="Container">
     <div class ="col-sm-4"></div>
     <div class="col-sm-4">
