--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,6 +12,22 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-inverse">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a th:if="${role} == 'ADMIN'" class="navbar-brand" href="/admin/user-management/1"><i class="fas fa-chevron-circle-left"></i></a>
+			<a class="navbar-brand" href="#">Book A MeetingRoom</a>
+		</div>
+		<ul class="nav navbar-nav" th:if="${role} == 'ADMIN'">
+			<li class="active"><a href="/admin/user-management/1">Users</a></li>
+			<li><a href="/meeting-room-details/1">Rooms</a></li>
+			<li><a href="/admin/booking-requests/1">Bookings</a></li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right" th:if="${role} == 'ADMIN'">
+			<li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+		</ul>
+	</div>
+</nav>
 	<div class="container">
 		<div class ="col-sm-3"></div>
 		<div class="col-sm-6">
@@ -22,25 +38,25 @@
 				<div class="form-group">
 					<div>
 					<input type="text" th:field="*{firstName}" placeholder="FirstName"
-							class="form-control" />
+							class="form-control" required/>
 					</div>
 				</div>
 				<div class="form-group">
 					<div>
 						<input type="text" th:field="*{lastName}"
-							placeholder="Last Name" class="form-control" />
+							placeholder="Last Name" class="form-control" required/>
 					</div>
 				</div>
 				<div class="form-group">
 					<div>
 						<input type="text" th:field="*{email}" placeholder="Email"
-							class="form-control" />
+							class="form-control" required/>
 					</div>
 				</div>
 				<div class="form-group">
 					<div>
 						<input type="password" th:field="*{password}"
-							placeholder="Password" class="form-control" /> <label
+							placeholder="Password" class="form-control" required/> <label
 							th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
 							class="validation-message"></label>
 					</div>
@@ -60,7 +76,7 @@
 				<div class="form-group">
 					<div>
 						<input type="text" th:field="*{mobileNo}" placeholder="Mobile No."
-							   class="form-control" />
+							   class="form-control" required/>
 					</div>
 				</div>
 				<div class="form-group">
@@ -81,9 +97,11 @@
 						<span><button class="button1" type="reset" value="reset">Clear</button></span>
 					</div>
 				</div>
-				<span th:utext="${successMessage}"></span>
+				<div>
+					<span style="font-size: 20; color:'green';" th:utext="${successMessage}"></span>
+				</div>
 			</form>
-			<form th:action="@{/login}" method="get">
+			<form th:action="@{/login}" method="get" th:if="${role} == null">
 				<br>
 				&nbsp Already a User? <button class="button2" type="submit">Sign in</button>
 			</form>
