--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -26,7 +26,7 @@
     <div class="panel-group" style="margin-top:40px">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3><span class="title">Reset </span><span>password</span></h3>
+                <h3><span>Reset </span><span>password</span></h3>
             </div>
             <div class="panel-body">
                 <form th:action="@{'/reset-password/'+${resetToken}}" method="post">
