Added ChangePassword module

--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -3,7 +3,8 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Forgot Password</title>
+    <title th:if="${temp} == null">Forgot Password</title>
+    <title th:if="${temp} == 1">Change Password</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
@@ -14,10 +15,11 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" th:href="@{/login}"><i class="fas fa-chevron-circle-left"></i></a>
+            <a class="navbar-brand" th:if="${temp} == null" th:href="@{/login}"><i class="fas fa-chevron-circle-left"></i></a>
+            <a class="navbar-brand" th:if="${temp} == 1" th:href="@{/user/user-profile}"><i class="fas fa-chevron-circle-left"></i></a>
             <a class="navbar-brand active" href="#">Book A MeetingRoom</a>
         </div>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right" th:if="${temp} == null">
             <li><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
     </div>
@@ -26,7 +28,10 @@
     <div class="panel-group" style="margin-top:40px">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3><span>Forgot </span><span>Password</span></h3>
+                <h3>
+                    <span th:if="${temp} == null">Forgot Password</span>
+                    <span th:if="${temp} == 1">Change Password</span>
+                </h3>
             </div>
             <div class="panel-body">
                 <form th:action="@{/forgot-password}" method="post">
