Completed Change Request Model for admin and for Users.

--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -22,6 +22,7 @@
 		<li class="active"><a href="/admin/user-management/1">Users</a></li>
 			<li><a href="/meeting-room-details/1">Rooms</a></li>
 			<li><a href="/admin/booking-requests/1">Bookings</a></li>
+			<li><a href="/admin/change-requests">Change Requests</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
