--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -80,16 +80,15 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<div>
 						<label>Select Department:</label>
 						<select class="form-control" th:field="*{department}">
 							<option value="Null" disabled selected>Select</option>
 							<option value="Java">Java</option>
+							<option value="Android">Android</option>
 							<option value="IOS">IOS</option>
 							<option value="JS">JS</option>
-							<option value="Testing  ">Testing</option>
+							<option value="Testing">Testing</option>
 						</select>
-					</div>
 				</div>
 				<div class="form-group">
 					<div>
@@ -98,7 +97,8 @@
 					</div>
 				</div>
 				<div>
-					<span style="font-size: 20; color:'green';" th:utext="${successMessage}"></span>
+					<span style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></span>
+					<span style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></span>
 				</div>
 			</form>
 			<form th:action="@{/login}" method="get" th:if="${role} == null">
