--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -38,8 +38,9 @@
                     <div class="form-group">
                         <input type="text" name="email" class="form-control" id="email" placeholder="Enter Email Id"/>
                     </div>
-                    <div align="center" th:if="${param.error}">
-                        <p style="font-size: 20; color: #FF1C19;">Email id invalid, please verify</p>
+                    <div>
+                        <p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
+                        <p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></p>
                     </div>
                     <div>
                         <span><button type="submit" class="button1" value="Submit" th:text="Submit">Submit</button></span>
