--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -36,9 +36,9 @@
                     <!--<div class="form-group">
                         <input type="password" name="ConfirmPassword" class="form-control" id="ConfirmPassword" placeholder="Confirm password" />
                     </div>-->
-                    <div><p th:text="${errorMessage}"></p></div>
-                    <div align="center" th:if="${param.error}">
-                        <p style="font-size: 20; color: #FF1C19;">Password does not match, please verify</p>
+                    <div>
+                        <p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
+                        <p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></p>
                     </div>
                     <div>
                         <span><button type="submit" class="button1" value="Submit" th:text="Submit">Submit</button></span>
