--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -19,10 +19,10 @@
 			<a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
 		</div>
 		<ul class="nav navbar-nav">
-		<li class="active"><a href="/admin/user-management/1">Users</a></li>
+			<li class="active"><a href="/admin/user-management/1">Users</a></li>
 			<li><a href="/meeting-room-details/1">Rooms</a></li>
 			<li><a href="/admin/booking-requests/1">Bookings</a></li>
-			<li><a href="/admin/change-requests">Change Requests</a></li>
+			<li><a href="/change-requests">Change Requests</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
@@ -85,7 +85,10 @@
 						</tbody>
 					</table>
 				</div>
-				<p class="text-center" th:utext="${successMessage}"></p>
+				<div>
+					<p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
+					<p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></p>
+				</div>
 			</div>
 		</div>
 	</div>
