--- a/src/main/resources/templates/user/bookRoom.html
+++ b/src/main/resources/templates/user/bookRoom.html
@@ -14,13 +14,17 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/meeting-room-details/1"><i class="fas fa-chevron-circle-left"></i></a>
-            <a class="navbar-brand active" href="/homepage">Book A MeetingRoom</a>
+            <a class="navbar-brand" href="/meeting-room-details/1">
+                <i class="fas fa-chevron-circle-left"></i>
+            </a>
+            <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
         </div>
         <ul class="nav navbar-nav">
             <li><a href="/user/user-profile">User Profile</a></li>
-            <li><a href="/meeting-room-details/1">Rooms</a></li>
-            <li class="active"><a href="/user/booking-status/1">Bookings</a></li>
+            <li class="active"><a href="/meeting-room-details/1">Rooms</a></li>
+            <li><a href="/user/booking-status/1">Bookings</a></li>
+            <li th:if="${role} == 'PM' or ${role} == 'TL'"><a href="/change-requests">Change Requests</a></li>
+            <li><a href="/user/profile-change-requests">Change Request Status</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
