--- a/src/main/resources/templates/user/change-request.html
+++ b/src/main/resources/templates/user/change-request.html
@@ -15,15 +15,17 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/user/user-profile">
+            <a class="navbar-brand" href="/homepage">
                 <i class="fas fa-chevron-circle-left"></i>
             </a>
             <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/user/user-profile">User Profile</a></li>
+            <li><a href="/user/user-profile">User Profile</a></li>
             <li><a href="/meeting-room-details/1">Rooms</a></li>
             <li><a href="/user/booking-status/1">Bookings</a></li>
+            <li class="active" th:if="${role} == 'PM' or ${role} == 'TL'"><a href="/change-requests">Change Requests</a></li>
+            <li><a href="/user/profile-change-requests">Change Request Status</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
@@ -71,8 +73,8 @@
                     </div>
                 </form>
                 <div>
-                    <p style="color:#FF1C19;" th:text="${errorMessage}"></p>
-                    <p style="color:#00BF6F;" th:text="${successMessage}"></p>
+                    <p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
+                    <p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></p>
                 </div>
             </div>
         </div>
