--- a/src/main/resources/templates/user/profile-change-requests.html
+++ b/src/main/resources/templates/user/profile-change-requests.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/user/user-profile">
+            <a class="navbar-brand" href="/homepage">
                 <i class="fas fa-chevron-circle-left"></i>
             </a>
             <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
@@ -24,6 +24,7 @@
             <li><a href="/user/user-profile">User Profile</a></li>
             <li><a href="/meeting-room-details/1">Rooms</a></li>
             <li><a href="/user/booking-status/1">Bookings</a></li>
+            <li th:if="${role} == 'PM' or ${role} == 'TL'"><a href="/change-requests">Change Requests</a></li>
             <li class="active"><a href="/user/profile-change-requests">Change Request Status</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -64,8 +65,10 @@
                     </tr>
                     </tbody>
                 </table>
-                <p style="color:#FF1C19;" th:text="${errorMessage}"></p>
-                <p style="color:#00BF6F;" th:text="${successMessage}"></p>
+                <div>
+                    <p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
+                    <p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></p>
+                </div>
             </div>
         </div>
     </div>
