--- a/src/main/resources/templates/meeting-room-details.html
+++ b/src/main/resources/templates/meeting-room-details.html
@@ -33,28 +33,10 @@
 </nav>
 
 <div class="container">
-    <div th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'">
-        <form  action="#" th:action="@{/filter-room-with-date}" th:method="POST">
-            <table>
-                <tr>
-                    <th>Date: </th>
-                    <td><input type="date" name="date" autofocus required>&nbsp;&nbsp;</td>
-                    <th>Start Time: </th>
-                    <td><input type="time" name="startTime" required>&nbsp;&nbsp;</td>
-                    <th>End Time: </th>
-                    <td><input type="time" name="endTime" required>&nbsp;&nbsp;</td>
-                    <td>
-                        &nbsp;&nbsp;
-                        <input class="button2" type="submit" id="submit" value="Check Availability">
-                    </td>
-                </tr>
-            </table>
-        </form>
-    </div>
     <div class="panel-group" style="margin-top:30px">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h4><span th:utext="${meetingRoomDetails}"></span></h4>
+            <h4><span> Meeting Rooms</span></h4>
             <span th:utext="${userName}"></span>
             <div style="float:right;" th:if="${role} == 'ADMIN'">
                 <form th:action="@{/admin/add-room}" method="get">
@@ -64,6 +46,25 @@
             </div>
         </div>
         <div class="panel-body">
+            <div th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'">
+                <form th:action="@{/filter-room-with-date}" th:method="POST">
+                    <table>
+                        <tr>
+                            <th>Date: </th>
+                            <td><input type="date" name="date" autofocus required>&nbsp;&nbsp;</td>
+                            <th>Start Time: </th>
+                            <td><input type="time" name="startTime" required>&nbsp;&nbsp;</td>
+                            <th>End Time: </th>
+                            <td><input type="time" name="endTime" required>&nbsp;&nbsp;</td>
+                            <td>
+                                &nbsp;&nbsp;
+                                <input class="button2" type="submit" value="Check Availability">
+                            </td>
+                        </tr>
+                    </table>
+                </form>
+            </div>
+            <hr>
             <table class="table table-hover">
                 <thead>
                 <tr>
@@ -83,7 +84,7 @@
                     <td th:text="${meetingRoom.facilities}">[AC]</td>
                     <td th:text="${meetingRoom.status}">Available</td>
                     <td th:if="${role} == 'ADMIN'">
-                        <a th:href="@{/admin/updateMeetingRoom/{id}(id=${meetingRoom.id})}"
+                        <a th:href="@{/admin/updateMeetingRoom/{id}(id=${meetingRoom.id}}"
                            class="btn btn-primary">Edit
                         </a>
                     </td>
@@ -93,9 +94,11 @@
                         </a>
                     </td>
                     <td th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'">
-                        <a th:href="@{/bookRoom/{id}(id=${meetingRoom.id})}"
-                           class="btn btn-primary">Book
-                        </a>
+                        <form th:if="${temp} == 1"
+                           th:action="@{'/bookRoom/'+${meetingRoom.id}+'/'+${date}+ '/'+${startTime}+ '/'+${endTime}}"
+                              method="post">
+                            <input type="submit" class="btn btn-primary" value="Book" />
+                        </form>
                     </td>
                 </tr>
                 </tbody>
