--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -66,7 +66,7 @@
 							<td th:text="${user.gender}">male</td>
 							<td th:text="${user.email}">test@example.com</td>
 							<td th:text="${user.mobileNo}">123456789</td>
-							<td th:text="${user.department}">testdept</td>
+							<td th:text="${user.Department.name}">testdept</td>
 							<td th:text="${user.active}">1</td>
 							<td th:text="${user.Role.role}">TestAdmin</td>
 							<td>
