--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -81,13 +81,13 @@
 				</div>
 				<div class="form-group">
 						<label>Select Department:</label>
-						<select class="form-control" th:field="*{department}">
+						<select class="form-control" name="department">
 							<option value="Null" disabled selected>Select</option>
-							<option value="Java">Java</option>
-							<option value="Android">Android</option>
-							<option value="IOS">IOS</option>
-							<option value="JS">JS</option>
-							<option value="Testing">Testing</option>
+							<option value="1">Java</option>
+							<option value="2">Android</option>
+							<option value="3">IOS</option>
+							<option value="4">JS</option>
+							<option value="5">Testing</option>
 						</select>
 				</div>
 				<div class="form-group">
