--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="checkbox">
-                <label><input type="checkbox"> Remember me</label>
+                <label><input type="checkbox" name="remember-me"> Remember me</label>
             </div>
             <div>
                 <span><button type="submit" class="button1" value="Login" th:text="Login">Login</button></span>
