added booking History and filtered booking requests with their status.

--- a/src/main/resources/templates/user/booking-status.html
+++ b/src/main/resources/templates/user/booking-status.html
@@ -33,12 +33,44 @@
     </div>
 </nav>
 <div class="container">
+    <div th:if="${temp} == '1'" style="float:right;">
+        <form th:action="@{/booking-history}" method="get">
+            <button class="button2" name="history"
+                    type="Submit">Booking History</button>
+        </form>
+    </div>
     <div class="panel-group" style="margin-top:40px">
         <div class="panel panel-primary">
-            <div class="panel-heading">
+            <div class="panel-heading" style="height:120px">
                 <h4>User Console</h4>
                 <span th:utext="${userName}"></span>
                 <h5>Booking Requests</h5>
+                <div th:if="${temp} == '1'">
+                    <div style="float:left;">
+                        <form th:action="@{/user/booking-status/1}" method="">
+                            <button class="btn btn-danger" name="confirm"
+                                    type="Submit">All</button>
+                        </form>
+                    </div>
+                    <div style="float:left;">
+                        <form th:action="@{/user/booking-status/pending}" method="">
+                            <button class="btn btn-danger" name="confirm"
+                                    type="Submit">Pending</button>
+                        </form>
+                    </div>
+                    <div style="float:left;">
+                        <form th:action="@{/user/booking-status/confirmed}" method="">
+                            <button class="btn btn-danger" name="confirm"
+                                    type="Submit">Confirmed</button>
+                        </form>
+                    </div>
+                    <div style="float:left;">
+                        <form th:action="@{/user/booking-status/rejected}" method="">
+                            <button class="btn btn-danger" name="confirm"
+                                    type="Submit">Rejected</button>
+                        </form>
+                    </div>
+                </div>
             </div>
             <div class="panel-body">
                 <table class="table table-hover">
@@ -49,7 +81,7 @@
                         <th>Start Time</th>
                         <th>End Time</th>
                         <th>Status</th>
-                        <th>Operations</th>
+                        <th th:if="${temp} == '1'">Operations</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -59,7 +91,7 @@
                         <td th:text="${booking.startTime}">Class</td>
                         <td th:text="${booking.endTime}">Class</td>
                         <td th:text="${booking.status}">confirm</td>
-                        <td class="centered">
+                        <td th:if="${temp} == '1'" class="centered">
                             <a th:href="@{/deleteRequest/{id}(id=${booking.id})}"
                                class="btn btn-danger">Delete
                             </a>
