--- a/src/main/resources/templates/admin/booking-requests.html
+++ b/src/main/resources/templates/admin/booking-requests.html
@@ -33,10 +33,35 @@
 <div class="container">
     <div class="panel-group" style="margin-top:40px">
         <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h4>Admin Console</h4>
-                <h5>Booking Requests</h5>
+            <div class="panel-heading" style="height:120px">
+                <h4>Booking Requests</h4>
                 <span th:utext="${userName}"></span>
+                <div>
+                    <div style="float:left;">
+                        <form th:action="@{/admin/booking-requests/1}" method="">
+                            <button class="btn btn-danger" name="confirm"
+                                    type="Submit">All</button>
+                        </form>
+                    </div>
+                    <div style="float:left;">
+                        <form th:action="@{/admin/booking-requests/pending}" method="">
+                            <button class="btn btn-danger" name="confirm"
+                                    type="Submit">Pending</button>
+                        </form>
+                    </div>
+                    <div style="float:left;">
+                        <form th:action="@{/admin/booking-requests/confirmed}" method="">
+                            <button class="btn btn-danger" name="confirm"
+                                    type="Submit">Confirmed</button>
+                        </form>
+                    </div>
+                    <div style="float:left;">
+                        <form th:action="@{/admin/booking-requests/rejected}" method="">
+                            <button class="btn btn-danger" name="confirm"
+                                    type="Submit">Rejected</button>
+                        </form>
+                    </div>
+                </div>
             </div>
             <div class="panel-body">
                 <table class="table table-hover">
