--- a/src/main/resources/templates/user/edit-user-profile.html
+++ b/src/main/resources/templates/user/edit-user-profile.html
@@ -77,7 +77,7 @@
             </div>
             <div class="form-group">
                 <div>
-                    <input type="text" class="form-control" th:field="*{department}" disabled>
+                    <input type="text" class="form-control" th:field="*{department.name}" disabled>
                 </div>
             </div>
             <div class="form-group">
