--- a/src/main/resources/templates/user/bookRoom.html
+++ b/src/main/resources/templates/user/bookRoom.html
@@ -1,63 +1,63 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Select Date</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-    <script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/meeting-room-details/1">
-                <i class="fas fa-chevron-circle-left"></i>
-            </a>
-            <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li><a href="/user/user-profile">User Profile</a></li>
-            <li class="active"><a href="/meeting-room-details/1">Rooms</a></li>
-            <li><a href="/user/booking-status/1">Bookings</a></li>
-            <li th:if="${role} == 'PM' or ${role} == 'TL'"><a href="/change-requests">Change Requests</a></li>
-            <li><a href="/user/profile-change-requests">Change Request Status</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-        </ul>
-    </div>
-</nav>
-    <div class="container">
-        <div class="panel-group" style="margin-top:40px">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h4>User Console</h4>
-                    <span th:utext="${userName}"></span><br>
-                </div>
-                <div class="panel-body">
-                    <div align="center">
-                    <form autocomplete="off" action="#" th:action="@{'/bookRoom/'+${id}+'/'+${userId}}"
-                       th:object="${bookingDetails}" th:method="post" class="form-horizontal"
-                              role="form">
-                        <div class="form-group">
-                            <label>Date: </label>
-                            <input type="date" name="date" th:field="*{date}" autofocus/>
-                        </div>
-                        <div class="form-group">
-                            <div>
-                                <span><button class="button1" type="submit" >Submit</button></span>
-                                <span><button class="button1" type="reset" value="reset">Clear</button></span>
-                            </div>
-                        </div>
-                    </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns="http://www.w3.org/1999/xhtml"-->
+<!--      xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Select Date</title>-->
+<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/design.css}" />-->
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+<!--    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">-->
+<!--    <script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
+<!--    <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+<!--</head>-->
+<!--<body>-->
+<!--<nav class="navbar navbar-inverse">-->
+<!--    <div class="container-fluid">-->
+<!--        <div class="navbar-header">-->
+<!--            <a class="navbar-brand" href="/meeting-room-details/1">-->
+<!--                <i class="fas fa-chevron-circle-left"></i>-->
+<!--            </a>-->
+<!--            <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>-->
+<!--        </div>-->
+<!--        <ul class="nav navbar-nav">-->
+<!--            <li><a href="/user/user-profile">User Profile</a></li>-->
+<!--            <li class="active"><a href="/meeting-room-details/1">Rooms</a></li>-->
+<!--            <li><a href="/user/booking-status/1">Bookings</a></li>-->
+<!--            <li th:if="${role} == 'PM' or ${role} == 'TL'"><a href="/change-requests">Change Requests</a></li>-->
+<!--            <li><a href="/user/profile-change-requests">Change Request Status</a></li>-->
+<!--        </ul>-->
+<!--        <ul class="nav navbar-nav navbar-right">-->
+<!--            <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</nav>-->
+<!--    <div class="container">-->
+<!--        <div class="panel-group" style="margin-top:40px">-->
+<!--            <div class="panel panel-primary">-->
+<!--                <div class="panel-heading">-->
+<!--                    <h4>User Console</h4>-->
+<!--                    <span th:utext="${userName}"></span><br>-->
+<!--                </div>-->
+<!--                <div class="panel-body">-->
+<!--                    <div align="center">-->
+<!--                    <form autocomplete="off" action="#" th:action="@{'/bookRoom/'+${id}+'/'+${userId}}"-->
+<!--                       th:object="${bookingDetails}" th:method="post" class="form-horizontal"-->
+<!--                              role="form">-->
+<!--                        <div class="form-group">-->
+<!--                            <label>Date: </label>-->
+<!--                            <input type="date" name="date" th:field="*{date}" autofocus/>-->
+<!--                        </div>-->
+<!--                        <div class="form-group">-->
+<!--                            <div>-->
+<!--                                <span><button class="button1" type="submit" >Submit</button></span>-->
+<!--                                <span><button class="button1" type="reset" value="reset">Clear</button></span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</body>-->
+<!--</html>-->
